@startuml

title __LIBRARY FRAGMENT's Class Diagram__\n

package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.adapter {
    class TabsAdapter {
      - mFragmentList : List<Fragment>
      - mFragmentTitleList : List<String>
      + TabsAdapter()
      + addFragment()
      + getPageTitle()
      + getItem()
      + getCount()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.adapter {
    class BookDataAdapter {
      - myBorrowedBookList : List<BookListItem>
      - myOwnedBookList : List<BookListItem>
      {static} - instance : BookDataAdapter
      {static} + getInstance()
      - BookDataAdapter()
      + getMyBorrowedBooksList()
      + getMyOwnedBooksList()
      - fetchMyBorrowedBooksList()
      - fetchMyOwnedBooksList()
      - userBooksToBookList()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.adapter {
    class BookRecyclerViewAdapter {
      - mContext : Context
      - mBookListItem : List<BookListItem>
      - destination : String
      + BookRecyclerViewAdapter()
      + onCreateViewHolder()
      + onBindViewHolder()
      + getItemCount()
      - dataBundler()
      + setmBookListItem()
      - setDestination()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.activity {
    class MainActivity {
      - fetching : boolean
      - bookDataObserver : Observer
      - bookDataAdapter : BookDataAdapter
      # onCreate()
      # onDestroy()
      # onStart()
      - loadFragment()
      + onNavigationItemSelected()
      # onResume()
      + onProfileButtonClick()
      + isFetching()
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment.library {
      class AllTabFragment {
        - bookListings : List<BookListItem>
        - mainActivity : MainActivity
        - bookAdapter : BookRecyclerViewAdapter
        - view : View
        + onCreateView()
        + onViewCreated()
        + onAttach()
        + onResume()
        + update()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment.library {
      class AvailableFragment {
        - bookListings : List<BookListItem>
        - mainActivity : MainActivity
        - bookAdapter : BookRecyclerViewAdapter
        - view : View
        + onCreateView()
        + onViewCreated()
        + onAttach()
        + onResume()
        + update()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment.library {
      class LibraryFragment {
        + onCreateView()
        - setupViewPager()
        + onClick()
      }
    }
  }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
  package ca.ualberta.CMPUT3012019T02.alexandria.fragment {
    package ca.ualberta.CMPUT3012019T02.alexandria.fragment.library {
      class LoanedFragment {
        - mainActivity : MainActivity
        - bookListings : List<BookListItem>
        - bookAdapter : BookRecyclerViewAdapter
        - view : View
        + onCreateView()
        + onViewCreated()
        + onAttach()
        + onResume()
        + update()
      }
    }
  }
}

note bottom of BookDataAdapter
  Observer Pattern
end note

AllTabFragment -up-|> Observer
AllTabFragment -up-|> Fragment
AllTabFragment o-- "1" BookRecyclerViewAdapter
AvailableFragment -up-|> Observer
AvailableFragment -up-|> Fragment
AvailableFragment o-- "1" BookRecyclerViewAdapter
LibraryFragment -up-|> OnClickListener
LibraryFragment -up-|> Fragment
LibraryFragment "1" -- "1" AllTabFragment : creates >
LibraryFragment "1" -- "1" AvailableFragment : creates >
LibraryFragment "1" -- "1" LoanedFragment : creates >
LoanedFragment -up-|> Observer
LoanedFragment -up-|> Fragment
LoanedFragment o-- "1" BookRecyclerViewAdapter
BookDataAdapter o-up- "1" AvailableFragment
BookDataAdapter o-up- "1" LoanedFragment
BookDataAdapter o-up- "1" AllTabFragment
BookDataAdapter -up-|> Observable
LibraryFragment "1" -- "1" TabsAdapter : creates >




right footer


  PlantUML diagram partly generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
  For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
